--- a/package.json
+++ b/package.json
@@ -2,20 +2,32 @@
   "name": "easy-decision",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@types/dotenv-safe": "^8.1.2",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
+    "crypto": "^1.0.1",
+    "csrf": "^3.1.0",
+    "dotenv-cli": "^6.0.0",
+    "dotenv-safe": "^8.2.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "js-cookie": "^3.0.1",
+    "ley": "^0.8.1",
     "next": "13.0.6",
+    "postgres": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
